# tg_autoreplyer

./: .editorconfig  .gitignore  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt
src/: main.py
src/lib/: autoreplyer.py
test/: test_autoreplyer.py
